updates for oauth setup

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     <p>This is a sample Java application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
 
 
-    <a type="button" class="btn btn-lg btn-default" href="https://login.salesforce.com/services/oauth2/authorize?response_type=code&client_id=3MVG9yZ.WNe6byQDinV4pEtYbk.XKrK3LwCNZtKCJ9lKnd6keoaNjuNXu7i3EBK_lLzNSZnXAkQE.2gw4xFZn&redirect_uri=http://localhost:8080/ForceNavigator/_auth&prompt=login consent&display=page"><span class="glyphicon glyphicon-flash"></span> Login With Salesforce</a>
+    <a type="button" class="btn btn-lg btn-default" href="sfauth"><span class="glyphicon glyphicon-flash"></span> Login With Salesforce</a>
 
     <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/java-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
   </div>
