URL fixes and add heroku button for deployment

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
       <img src="/lang-logo.png">
     </a>
     <h1>Getting Started with Salesfroce OAuth on Heroku</h1>
-    <p>This is a sample Java application deployed to Heroku. It's a simple Java Spring Boot app - that is good foundation for understanding how to get web apps Authenticated with the Web Server OAuth Authentication Flow on the Salesfroce Lightning & Heroku platforms.</p>
+    <p>This is a sample Java application can be deployed on Heroku or run local. It's a simple Java Spring Boot app - that is good foundation for understanding how to get web apps Authenticated with the Web Server OAuth Authentication Flow on the Salesfroce Lightning & Heroku platforms.</p>
 
 
     <a type="button" class="btn btn-lg btn-default" href="sfauth"><span class="glyphicon glyphicon-flash"></span> Login With Salesforce</a>
@@ -47,6 +47,9 @@
       </ul>
       <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
       <ul>
+        <li><a href="https://developer.salesforce.com/docs/atlas.en-us.api_rest.meta/api_rest/intro_understanding_oauth_endpoints.htm#intro_understanding_oauth_endpoints">Understanding OAuth Endpoints</a></li>
+        <li><a href="https://developer.salesforce.com/docs/atlas.en-us.api_rest.meta/api_rest/intro_understanding_web_server_oauth_flow.htm">How Are Apps Authenticated with the Web Server OAuth Authentication Flow?</a></li>
+        <li><a href="https://developer.salesforce.com/docs/atlas.en-us.api_rest.meta/api_rest/quickstart.htm">Salesfroce REST API Quick Start</a></li>
         <li><a href="https://www.heroku.com/home">Heroku</a></li>
         <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
         <li><a href="https://devcenter.heroku.com/articles/getting-started-with-java">Getting Started with Java on Heroku</a></li>
