add config values for access keays and heroku deploy,emt

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,11 +8,12 @@
     <a href="/" class="lang-logo">
       <img src="/lang-logo.png">
     </a>
-    <h1>Getting Started with Salesfroce OAuth on Heroku</h1>
+    <h1>Getting Started with Salesforce OAuth on Heroku</h1>
     <p>This is a sample Java application can be deployed on Heroku or run local. It's a simple Java Spring Boot app - that is good foundation for understanding how to get web apps Authenticated with the Web Server OAuth Authentication Flow on the Salesfroce Lightning & Heroku platforms.</p>
 
 
-    <a type="button" class="btn btn-lg btn-default" href="sfauth"><span class="glyphicon glyphicon-flash"></span> Login With Salesforce</a>
+    <a type="button" class="btn btn-lg btn-default" href="sfauth"><span class="glyphicon glyphicon-flash"></span> Login With Salesforce Production</a>
+    <a type="button" class="btn btn-lg btn-default" href="sfauthsb"><span class="glyphicon glyphicon-flash"></span> Login With Salesforce Sanbox</a>
 
     <a type="button" class="btn btn-lg btn-primary" href="https://github.com/iandrosov/sf-oauth-java-example"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
   </div>
