--- a/src/main/resources/templates/authresult.html
+++ b/src/main/resources/templates/authresult.html
@@ -6,9 +6,9 @@
 	    <a href="/" class="lang-logo">
 	      <img src="/lang-logo.png">
 	    </a>
-	    <h1>Logged In to Salesfroce OAuth</h1>
-	    <p>This page confirms the successfull OAuth login</p>
-
+	    <h1>Logged In to Salesforce via OAuth</h1>
+	    <p>This page confirms the successfull OAuth login for instance</p>
+	    <p th:text="${instance_url}"/>
 	  </div>
 	</div>
 
