--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -19,10 +19,9 @@
                     <a href="https://devcenter.heroku.com/articles/how-heroku-works"><span class="glyphicon glyphicon-user"></span> How Heroku Works</a>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Login <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="/">Login</a></li>
-                        <li><a href="#">Logout</a></li>
                         <li class="divider"></li>
                         <li><a href="#">Help</a></li>
                         <li><a href="#">About</a></li>
