Add query button

--- a/src/main/resources/templates/authresult.html
+++ b/src/main/resources/templates/authresult.html
@@ -9,6 +9,9 @@
 	    <h1>Logged In to Salesforce via OAuth</h1>
 	    <p>This page confirms the successfull OAuth login for instance</p>
 	    <p th:text="${instance_url}"/>
+
+	    <a type="button" class="btn btn-lg btn-default" href="queryresult"><span class="glyphicon glyphicon-flash"></span> Query Contacts Example</a>
+    
 	  </div>
 	</div>
 
