redame adntext corrections on index template

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <a href="/" class="lang-logo">
       <img src="/lang-logo.png">
     </a>
-    <h1>Getting Started with Salesforce OAuth on Heroku</h1>
+    <h1>Getting Started with Java Salesforce OAuth Connector on Heroku</h1>
     <p>This is a sample Java application can be deployed on Heroku or run local. It's a simple Java Spring Boot app - that is good foundation for understanding how to get web apps Authenticated with the Web Server OAuth Authentication Flow on the Salesfroce Lightning & Heroku platforms.</p>
 
 
