Add Event pun=blish nethods

--- a/src/main/resources/templates/authresult.html
+++ b/src/main/resources/templates/authresult.html
@@ -11,6 +11,7 @@
 	    <p th:text="${instance_url}"/>
 
 	    <a type="button" class="btn btn-lg btn-default" href="queryresult"><span class="glyphicon glyphicon-flash"></span> Query Contacts Example</a>
+	    <a type="button" class="btn btn-lg btn-default" href="pubevent"><span class="glyphicon glyphicon-flash"></span> Publish Event</a>
     
 	  </div>
 	</div>
